--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head></head>
   <body>
-    <h1>welcome to my page</h1>
+    <div id=app></div>
+    <script async defer src=/bundle.js></script>
   </body>
 </html>
