--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/style.css">
-    <link type="text/css" rel="stylesheet" href="http://fast.fonts.net/t/1.css?apiType=css&amp;projectid=dbc21244-67cb-4239-9522-f34d84cd2996">
+    <link type="text/css" rel="stylesheet" href="https://fast.fonts.net/t/1.css?apiType=css&amp;projectid=dbc21244-67cb-4239-9522-f34d84cd2996">
   </head>
   <body>
     <div id=app></div>
